# FIDS

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
fids/: __init__.py  fids.py
fids/config/: bids.json
tests/: test_fids.py
